objects/WT_Exception_Log__c.object
<CustomObject>
    <fields>
        <fullName>WT_Class_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Exception__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_Method_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Record_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Exception Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Exception Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>